# mini_project_otani

./: README.md  docker-compose.yml
backend/: Dockerfile  config_db.py  main.py  pyproject.toml
backend/models/: base_models.py  brand.py  cart.py  cart_item.py  category.py  product.py  user.py
backend/schemas/: addproduct.py  base_schemas.py  brand.py  cart.py  cart_item.py  category.py  login.py  product.py  user.py
front_end/: Dockerfile  package-lock.json  package.json
front_end/src/assets/: main.scss
front_end/src/components/: Add.vue  Cart.vue  Edit.vue  LoginVue.vue  TopBar.vue  UserManagement.vue  productDetail.vue  productItem.vue  productItemUser.vue
front_end/src/plugins/: url.js
front_end/src/router/: index.ts
front_end/src/views/: CartView.vue  FootballClothesView.vue  FootballShoesView.vue  HomeView.vue  ProductDetail.vue  SportEquipmentView.vue  UserManagementView.vue
