[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.86.0"
peewee = "^3.15.4"
uvicorn = "^0.19.0"
pydantic = "^1.10.2"
psycopg2-binary = "^2.9.5"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
